Fixed screen collapsing when hiding the chat.

--- a/src/front-end/css/index.css
+++ b/src/front-end/css/index.css
@@ -119,6 +119,7 @@ body {
 .streamcontainer {
     position: relative;
     grid-area: streamcontainer;
+    height: 95vh;
 }
 
 .streams{
